--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ body{
 }
 .result-display{
     font-size: 20px;
+    padding-bottom: 20px;
+}
+.round-result{
+    height: 40px;
 }
 .score-container{
     display: flex;
